Fix modal size on smaller devices

--- a/css/app.css
+++ b/css/app.css
@@ -157,6 +157,7 @@ h1 {
 
 .modal__content {
   width: 400px;
+  max-width: 90%;
   position: absolute;
   background-color: #fff;
   border-radius: 5px;
